--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "npm rum tsc -- --noEmit && jest",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "dev": "nodemon src/infrastructure/api/server.ts"
   },
   "author": "",
   "license": "ISC",
@@ -14,13 +15,19 @@
     "@swc/core": "^1.3.96",
     "@swc/jest": "^0.2.29",
     "@types/jest": "^29.5.8",
+    "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
+    "supertest": "^6.3.4",
     "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@types/express": "^4.17.21",
     "@types/uuid": "^9.0.7",
+    "dotenv": "^16.4.4",
+    "express": "^4.18.2",
+    "nodemon": "^3.0.3",
     "reflect-metadata": "^0.2.1",
     "sequelize": "^6.35.2",
     "sequelize-typescript": "^2.1.6",
